--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
   </div>
   <canvas id="matrix"></canvas>
   <script src="script.js"></script>
+  <div id="rabbit-container">
+  <img src="images\white-rabbit.png" alt="White Rabbit" id="white-rabbit">
+</div>
 </body>
 </html>
