--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="vertical-panel left-panel">
+    <h3>System Information</h3>
+    <ul id="system-info">
+        <!-- Data will be populated dynamically -->
+    </ul>
+    </div>
+
+    <div class="vertical-panel right-panel">
+    <h3>Network Information</h3>
+    <ul id="network-info">
+        <!-- Data will be populated dynamically -->
+    </ul>
+    </div>
+
   <div class="container">
     <div class="card hacker-card">
         <div class="card-header">
