--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="vertical-panel right-panel">
-    <h3>Network Information</h3>
+    <h3>Terminal</h3>
     <ul id="network-info">
         <!-- Data will be populated dynamically -->
     </ul>
