--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul id="system-info">
         <!-- Data will be populated dynamically -->
     </ul>
+    <canvas id="canvas2"></canvas> <!-- Add canvas for the network trace -->
     </div>
 
     <div class="vertical-panel right-panel">
