--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
         <!-- Data will be populated dynamically -->
     </ul>
     <canvas id="canvas2"></canvas> <!-- Add canvas for the network trace -->
+    <div class="progress-container">
+      <div class="progress">
+        <div
+          id="progress-bar"
+          class="progress-bar bg-success"
+          role="progressbar"
+          style="width: 0%"
+          aria-valuenow="0"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        ></div>
+      </div>
+    </div>
     </div>
 
     <div class="vertical-panel right-panel">
