tracking comleted hashes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="container">
     <div class="card hacker-card">
         <div class="card-header">
-            <h1 class="neon-text">Challenge 1</h1>
+            <h1 id="challenge-header" class="neon-text">Challenge 1</h1>
         </div>
         <div class="card-body">
             <img src="images/challenge1.jpg" id="challenge-image" class="img-fluid">
