added arbitrary images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <canvas id="matrix"></canvas>
   <script src="script.js"></script>
   <div id="rabbit-container">
-  <img src="images\white-rabbit.png" alt="White Rabbit" id="white-rabbit">
+  <img src="assets\white-rabbit.png" alt="White Rabbit" id="white-rabbit">
 </div>
 </body>
 </html>
