making wider than just images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1 id="challenge-header" class="neon-text">Challenge 1</h1>
         </div>
         <div class="card-body">
-            <img src="images/challenge1.jpg" id="challenge-image" class="img-fluid">
+            <img src="challenge_files/challenge1.jpg" id="challenge-image" class="img-fluid">
         </div>
     </div>
     <div id="response-area" class="card mt-3">
