--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
         <div class="card-body">
             <img src="challenge_files/challenge1.jpg" id="challenge-image" class="img-fluid">
+            <p id="challenge-text"></p>
         </div>
     </div>
     <div id="response-area" class="card mt-3">
