fixed crypto pain

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   </div>
   <canvas id="matrix"></canvas>
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <div id="rabbit-container">
   <img src="assets\white-rabbit.png" alt="White Rabbit" id="white-rabbit">
 </div>
