fixed yt autoplay

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <video id="challenge-video" controls class="img-fluid" style="display: none;"></video>
 
           <!-- For YouTube embeds -->
-          <iframe id="challenge-iframe" width="560" height="315" style="display: none;" frameborder="0" allowfullscreen></iframe>
+          <iframe id="challenge-iframe" width="560" height="315" style="display: none;" frameborder="0" allowfullscreen allow="autoplay"></iframe>
  
           <!-- For other file types -->
           <a id="challenge-download" href="" download style="display: none;">Download File</a>
